# CalMac

./: .gitignore  2026-06-25.md  2026-06-26.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: calendar.rs  todo.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: database.rs  event_service.rs  mod.rs  reminder.rs  todo_service.rs
src/components/Calendar/: EventForm.vue  EventItem.vue  MonthView.vue
src/components/Common/: Header.vue
src/components/Todo/: TodoItem.vue  TodoPanel.vue
src/stores/: calendar.ts  todo.ts
src/types/: event.ts
src/utils/: date.ts  holidays.ts
